stylig blank page

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,8 @@ body, html {
 .error-message {
     color: red;
     font-size: 0.8em;
-    margin-top: 5px;
+    margin-bottom: 5px;
+    align-items: start;
 }
   
 .popup-error {
@@ -102,6 +103,15 @@ body, html {
     padding: 10px;
     margin-top: 10px;
     border-radius: 4px;
+}
+
+.blank-page-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    height: 100vh;
+    color: white;
 }
 
 
