styling background image

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: #244BC5;
+  background-color: #2148C0;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
