--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,23 @@
 body, html {
     margin: 0;
     padding: 0;
-}  
+} 
+
+.main-container{
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
+.bg-image{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
 
 .login-container {
     display: flex;
@@ -15,10 +31,11 @@ body, html {
     padding: 40px;
     text-align: center;
     width: 300px;
+    background: transparent;
 }
   
 .logo {
-    margin-bottom: 44px;
+    margin-bottom: 64px;
 }
 
 .input-container {
@@ -93,8 +110,12 @@ body, html {
 .error-message {
     color: red;
     font-size: 0.8em;
-    margin-bottom: 5px;
-    align-items: start;
+    margin-top: -10px;
+    margin-bottom: 10px;
+    text-align: left;
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
 }
   
 .popup-error {
