--- a/src/App.css
+++ b/src/App.css
@@ -118,12 +118,46 @@ body, html {
     align-items: flex-start;
 }
   
-.popup-error {
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.popup {
+    background: red;
     color: white;
-    background-color: red;
-    padding: 10px;
-    margin-top: 10px;
-    border-radius: 4px;
+    padding: 20px;
+    border-radius: 25px;
+    text-align: center;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+.close-popup-button {
+    padding: 2px;
+    background: white;
+    color: red;
+    border: none;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+
+.close-popup-button:hover {
+    background: red;
+    border: 2px solid white;
+    color: white;
 }
 
 .blank-page-text{
